# reach_rnd

./: .gitignore  campaign_data.py  main.py  main_pipeline.py  pyproject.toml  text_tailor.py
crew_config/: ad_copy.yml  brand_voice.yml  candidate_demographics.yml  competitor_analysis.yml  creative_image_generation.yml  detailed_persona.yml  employee_sentiment.yml  image_analysis.yml  image_download.yml  job_analysis.yml  persona_outlines.yml  pmax_packager.yml  price_estimator.yml
crew_io_files/: ad_copy_persona_1.csv  ad_copy_persona_2.csv  ad_copy_persona_3.csv  ad_copy_persona_4.csv  ad_copy_persona_5.csv  all_personas.json  asset_group_data.json  avatar_images_db.csv  brand_voice.json  candidate_demographics.json  employee_sentiment.json  image_analysis_report.json  images_metadata.csv  job_analysis.json  keyword_data_pre_analysis.csv  persona_1.json  persona_2.json  persona_3.json  persona_4.json  persona_5.json  persona_outlines.json  pipeline_output.json
tools/: avatar_finder_tool.py  copy_reader_tool.py  copy_saver_tool.py  copy_writer_tool.py  image_analysis_tool.py  image_download_tool.py  price_estimator_tool.py
trim_tool/: trim_tool.py
utils/: google_sheets_util.py
